[package]
name = "hast"
version = "0.1.0"
edition = "2024"
authors = ["Jiangfeng Huang <paraworker@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Paraworker/hast"
description = "Thou hast come unto Wayland"

[dependencies]
rustix = { version = "1", features = ["fs"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
